# salary_prediction_app

./: README.md  app.py  encoders.pkl  pyproject.toml  salary_model.pkl  streamlit_app.py  train_model (2).py  train_model.py
